--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,17 @@
 {
   "background_color": "#FFF",
   "display": "standalone",
-  "name": "youAct",
-  "short_name": "youAct",
-  "version": "io.gc.youact",
+  "name": "idea",
+  "short_name": "idea",
+  "version": "io.gc.idea",
   "description": "A sample Apache Cordova application that responds to the deviceready event.",
   "author": "Apache Cordova Team",
-  "icons": [],
+  "icons": [
+    {
+      "src": "res/icon.png",
+      "type": "image/png",
+      "sizes": "undefinedxundefined"
+    }
+  ],
   "start_url": "index.html"
 }
